# JARVIS-AI

./: .gitignore  JARVIS - Architecture & Build Spec.html  JARVIS.html  README.md  agents.js  app.js  boot.js  demo-config.js  download.html  finance.css  index.html  orb.js  styles.css  vault.js  voice.js
.github/workflows/: pages.yml  release.yml
app/: .gitignore  PRELAUNCH.md  README.md  package-lock.json  package.json
app/demo-proxy/: README.md  worker.js  wrangler.toml
app/docs/: API-KEYS.md  SIGNING.md  UPDATES.md
app/src/: _headers  agents.css  app.js  audio.js  bridge.js  demo-agent.js  demo-config.local.example.js  download.html  finance.js  panels.css  panels.js  research.js  store.js
app/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs  orchestrator.rs  store.rs  system.rs
app/src-tauri/src/openai/: chat.rs  embed.rs  mod.rs  stt.rs  tts.rs
app/src-tauri/src/tools/: mod.rs
